@@ -66,6 +66,7 @@ ActiveRecord::Schema.define(version: 20160129135155) do
     t.string   "sentry_dsn"
     t.boolean  "akismet_enabled",                   default: false
     t.string   "akismet_api_key"
+    t.boolean  "email_author_in_body",              default: false
   end
 
   create_table "audit_events", force: :cascade do |t|
